# shareoxide

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix
src/: axum_error.rs  extract_url.rs  health.rs  init.surrealql  main.rs  oidc.rs  routes.rs  schema.rs  serialize_recordid.rs  settings.rs  state.rs  user.rs  userid_extractor.rs
src/routes/: api.rs  dash.rs  shortcut_handler.rs
src/routes/api/: health.rs  info.rs  link.rs  shortcut.rs
src/routes/dash/: home.rs  js.rs  shorten.js  styles.css  styles.rs
