[package]
name = "shareoxide"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie-private"] }
cookie = { version = "0.18.1", features = ["key-expansion"] }
dotenv = "0.15.0"
openidconnect = { version = "4.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
serde = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
