[package]
name = "shareoxide"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie-private"] }
color-eyre = "0.6.3"
config = "0.15.9"
cookie = { version = "0.18.1", features = ["key-expansion"] }
diesel = { version = "2.2.8", features = ["postgres"] }
dotenvy = "0.15.7"
openidconnect = { version = "4.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls",
    "timing-resistant-secret-traits",
] }
reqwest = { version = "0.12.12", features = [
    "rustls-tls",
    "http2",
    "charset",
], default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower = { version = "0.5.2", features = ["full", "tokio", "log"] }
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "json",
    "env-filter",
    "local-time",
    "serde",
    "serde_json",
    "time",
] }
url = "2.5.4"
urlencoding = "2.1.3"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[build-dependencies]
chrono = "0.4.39"
